Kobler opp endepunkt for markup v2. Kjører ende til ende nå.
