# pensjon/brevbaker/src/main/kotlin/no/nav/pensjon/brev/routing/AutobrevRoutesV2.kt
@@ -3,6 +3,7 @@ package no.nav.pensjon.brev.routing
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import no.nav.pensjon.brev.api.AutobrevTemplateResource
+import no.nav.pensjon.brev.api.countLetter
 import no.nav.pensjon.brev.api.model.BestillBrevRequest
 import no.nav.pensjon.brev.api.model.maler.Brevkode
 import no.nav.pensjon.brev.template.AutobrevTemplate
@@ -13,6 +14,12 @@ fun Route.autobrevRoutesV2(
     route("/${autobrev.name}") {
         post<BestillBrevRequest<Brevkode.Automatisk>>("/json") { brevbestilling ->
             call.respond(autobrev.renderLetterMarkupV2(brevbestilling))
+        }
+
+        post<BestillBrevRequest<Brevkode.Automatisk>>("/pdf") { brevbestilling ->
+            installBrevkodeInCallContext(brevbestilling.kode)
+            call.respond(autobrev.renderPDFV2(brevbestilling))
+            countLetter(brevbestilling.kode)
         }
     }
 }
