# pensjon/brevbaker/src/main/kotlin/no/nav/pensjon/brev/routing/RedigerbarRoutesV2.kt
@@ -5,7 +5,9 @@ import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import io.ktor.server.util.*
 import no.nav.pensjon.brev.api.RedigerbarTemplateResource
+import no.nav.pensjon.brev.api.countLetter
 import no.nav.pensjon.brev.api.model.BestillBrevRequest
+import no.nav.pensjon.brev.api.model.BestillRedigertBrevRequestV2
 import no.nav.pensjon.brev.api.model.maler.Brevkode
 import no.nav.pensjon.brev.template.RedigerbarTemplate
 
@@ -21,6 +23,12 @@ fun Route.redigerbarRoutesV2(
         post<BestillBrevRequest<Brevkode.Redigerbart>>("/markup-usage") { brevbestilling ->
             val markup = redigerbareBrev.renderLetterMarkupWithDataUsageV2(brevbestilling)
             call.respond(markup)
+        }
+
+        post<BestillRedigertBrevRequestV2<Brevkode.Redigerbart>>("/pdf") { brevbestilling ->
+            installBrevkodeInCallContext(brevbestilling.kode)
+            call.respond(redigerbareBrev.renderPDFV2(brevbestilling))
+            countLetter(brevbestilling.kode)
         }
 
         route("/redigerbare-vedlegg") {
